--- a/subgraph.yaml.mustache
+++ b/subgraph.yaml.mustache
@@ -80,11 +80,12 @@ dataSources:
           handler: handleOfferCompleted
         - event: CanceledOffer(indexed uint256,address,uint256)
           handler: handleCanceledOffer
-        - event: CreatedNftOffer(indexed uint256,address,address,uint256,uint256,uint256,address,uint256)
+        - event: CreatedNftOffer(indexed uint256,address,address,uint256,uint256[],uint256[],address,uint256)
           handler: handleNewNftOffer
         - event: CreatedNftOrder(indexed uint256,uint256,uint256,address)
           handler: handleNewOrder
         - event: CompletedNftOffer(indexed uint256)
+          handler: handleNftOfferCompleted
 {{ /dataSources.dOTCManager }}
 templates:
   - kind: ethereum/contract
