SM-276 | feat: dOTC subgraph update to handle ERC 1155 (#63)
* Add ERC1155 Support, add startBlock

Co-authored-by: Nikita Zasimuk
Co-authored-by: Ilamini Dagogo <dagogodboss@gmail.com>

--- a/subgraph.yaml.mustache
+++ b/subgraph.yaml.mustache
@@ -66,6 +66,8 @@ dataSources:
       entities:
         - Offers
         - Orders
+        - NFTOffers
+        - NFTOrders
       abis:
         - name: DOTCManager
           file: ./abis/DOTCManager.json
@@ -78,6 +80,12 @@ dataSources:
           handler: handleOfferCompleted
         - event: CanceledOffer(indexed uint256,address,uint256)
           handler: handleCanceledOffer
+        - event: CreatedNftOffer(indexed uint256,address,address,uint256,uint256[],uint256[],address,uint256)
+          handler: handleNewNftOffer
+        - event: CreatedNftOrder(indexed uint256,uint256,uint256,address)
+          handler: handleNewOrder
+        - event: CompletedNftOffer(indexed uint256)
+          handler: handleNftOfferCompleted
 {{ /dataSources.dOTCManager }}
 templates:
   - kind: ethereum/contract
