--- a/subgraph.yaml.mustache
+++ b/subgraph.yaml.mustache
@@ -106,6 +106,8 @@ dataSources:
       abis:
         - name: TokenListManager
           file: ./abis/TokenListManager.json
+        - name: ERC20
+          file: ./abis/ERC20.json
       eventHandlers:
         - event: RegisterERC20Token(indexed address)
           handler: addNewERC20Token
