--- a/subgraph.yaml.mustache
+++ b/subgraph.yaml.mustache
@@ -86,6 +86,12 @@ dataSources:
           handler: handleNewNftOrder
         - event: CompletedNftOffer(indexed uint256)
           handler: handleNftOfferCompleted
+        - event: CanceledNftOffer(indexed uint256,address)
+          handler: handleCanceledNftOffer
+        - event: TokenOfferUpdated(indexed uint256,uint256)
+          handler: handleTokenOfferUpdated
+        - event: NftOfferUpdated(indexed uint256,uint256)
+          handler: handleNftOfferUpdated
 {{ /dataSources.dOTCManager }}
 {{ #dataSources.dOTCListedTokens }}
   - kind: ethereum/contract
