SM-549 | feat: sub-Task update the amount out of the offer once we make an order  (#126)
* feat: Add DOTC token Lister

* config: update dOTCManager contract address

* Fixed non-nullable field issue

* Fixed non-nullable field issue

* add update offer for erc20 and erc1155

* add update offer for erc20 and erc1155

* add update offer for erc20 and erc1155

* fix error with deployment

* pull latest version

* Update CreatedOrder Event

* Update CreatedOrder Event

* Update CreatedOrder Event

Co-authored-by: Nikita Zasimuk <n.zasimuk@aiolane.com>
Co-authored-by: Ilamini Dagogo <dagogodboss@gmail.com>

--- a/subgraph.yaml.mustache
+++ b/subgraph.yaml.mustache
@@ -74,7 +74,7 @@ dataSources:
       eventHandlers:
         - event: CreatedOffer(indexed uint256,indexed address,address,address,uint256,uint256,uint8,address,bool,uint256)
           handler: handleNewOffer
-        - event: CreatedOrder(indexed uint256,indexed uint256,uint256,indexed address,uint256)
+        - event: CreatedOrder(indexed uint256,(uint256,uint256,address,uint256,uint256),uint256)
           handler: handleNewOrder
         - event: CompletedOffer(uint256)
           handler: handleOfferCompleted
@@ -92,6 +92,10 @@ dataSources:
           handler: handleTokenOfferUpdated
         - event: NftOfferUpdated(indexed uint256,uint256)
           handler: handleNftOfferUpdated
+        - event: UpdatedTokenOfferExpiry(indexed uint256,uint256)
+          handler: handleUpdatedTokenOfferExpiry
+        - event: UpdatedNftOfferExpiry(indexed uint256,uint256)
+          handler: handleUpdatedNftOfferExpiry
 {{ /dataSources.dOTCManager }}
 {{ #dataSources.dOTCListedTokens }}
   - kind: ethereum/contract
